--- a/Css/style.css
+++ b/Css/style.css
@@ -185,6 +185,9 @@ header {
     margin-right: calc(10px + 30 * ((100vw - 320px) / 850));
   }
 }
+.menu__item.btn--blue {
+  padding: 13px 22px;
+}
 
 .right {
   -webkit-box-pack: end;
@@ -689,6 +692,7 @@ header {
 }
 
 .button__try {
+  padding: 13px 22px;
   margin-right: 25px;
   margin-bottom: 20px;
 }
@@ -1050,6 +1054,16 @@ header {
     padding-right: 0px 20px;
   }
 }
+@media (max-width: 992.98px) {
+  .download {
+    padding-bottom: 130px;
+  }
+}
+@media (max-width: 992.98px) and (max-width: 1170px) {
+  .download {
+    padding-bottom: calc(80px + 50 * ((100vw - 320px) / 850));
+  }
+}
 
 .download-body {
   text-align: center;
@@ -1333,13 +1347,491 @@ header {
   }
 }
 
+.plan {
+  background-color: #f4f4f5;
+  padding-top: 160px;
+  padding-bottom: 190px;
+}
+@media (max-width: 1200px) {
+  .plan {
+    padding-top: 160px;
+    padding-bottom: 190px;
+  }
+}
+@media (max-width: 1200px) and (max-width: 1170px) {
+  .plan {
+    padding-top: calc(80px + 80 * ((100vw - 320px) / 850));
+  }
+}
+@media (max-width: 1200px) and (max-width: 1170px) {
+  .plan {
+    padding-bottom: calc(60px + 130 * ((100vw - 320px) / 850));
+  }
+}
+
+.plan-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (max-width: 1200px) {
+  .plan-body {
+    margin: 0px 20px;
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-body {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.plan-info {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 42%;
+          flex: 0 0 42%;
+}
+@media (max-width: 992.98px) {
+  .plan-info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 38%;
+            flex: 0 0 38%;
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+}
+
+.plan-info__title {
+  max-width: 255px;
+  font-family: "Varela Round";
+  font-size: 42px;
+  font-weight: 400;
+  color: #26272d;
+  line-height: 52px;
+  line-height: 52px;
+}
+@media (max-width: 1170px) {
+  .plan-info__title {
+    line-height: calc(45px + 7 * ((100vw - 767.98px) / 402.02));
+  }
+}
+.plan-info__title span {
+  display: inline-block;
+  line-height: 0px;
+  font-family: Lato;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #26272d;
+  padding-top: 65px;
+}
+@media (max-width: 1170px) {
+  .plan-info__title span {
+    padding-top: calc(55px + 10 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-info__title {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    line-height: 45px;
+    margin-bottom: 50px;
+  }
+  .plan-info__title span {
+    display: none;
+  }
+}
+
+.plan-info-switcher {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 4px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #26292c;
+  margin-bottom: 75px;
+  border: 1px solid #d8d9d9;
+  border-radius: 30px;
+  max-width: 260px;
+}
+@media (max-width: 1170px) {
+  .plan-info-switcher {
+    margin-bottom: calc(50px + 25 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-info-switcher {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 479.98px) {
+  .plan-info-switcher {
+    display: none;
+  }
+}
+
+.plan-info-switcher__button {
+  opacity: 0.4;
+  padding: 13px 30px;
+  border-radius: 30px;
+}
+.plan-info-switcher__button.active {
+  opacity: 1;
+  background-color: #fff;
+  color: #26292c;
+}
+
+.plan-info__text {
+  max-width: 355px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 400;
+  color: #8c8f94;
+}
+@media (max-width: 1170px) {
+  .plan-info__text {
+    line-height: calc(25px + 3 * ((100vw - 767.98px) / 402.02));
+  }
+}
+.plan-info__text span {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #8c8f94;
+}
+.plan-info__text span a {
+  display: inline-block;
+  padding-top: 45px;
+  text-decoration: underline;
+  color: #267df4;
+}
+@media (max-width: 1170px) {
+  .plan-info__text span a {
+    padding-top: calc(30px + 15 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-info__text span a {
+    padding-top: 25px;
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-info__text {
+    line-height: 24px;
+    margin-bottom: 40px;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1170px) {
+  .plan-info__text {
+    margin-bottom: calc(25px + 15 * ((100vw - 320px) / 850));
+  }
+}
+@media (max-width: 479.98px) {
+  .plan-info__text {
+    margin-bottom: 50px;
+  }
+}
+
+.plan-cards {
+  text-align: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+}
+@media (max-width: 767.98px) {
+  .plan-cards {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (max-width: 479.98px) {
+  .plan-cards {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.plan-cards-column {
+  padding-bottom: 50px;
+  background-color: #ebebed;
+  border-radius: 10px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: 10px;
+  margin-right: -10px;
+}
+@media (max-width: 1170px) {
+  .plan-cards-column {
+    padding-bottom: calc(30px + 20 * ((100vw - 767.98px) / 402.02));
+  }
+}
+.plan-cards-column.active {
+  z-index: 2;
+  background-color: #fff;
+  margin-top: -20px;
+  margin-bottom: -20px;
+  margin-left: -10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+}
+@media (max-width: 1170px) {
+  .plan-cards-column.active {
+    margin-top: calc(-10px + -10 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 1170px) {
+  .plan-cards-column.active {
+    margin-bottom: calc(-10px + -10 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 1170px) {
+  .plan-cards-column.active {
+    padding-top: calc(10px + 10 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 1170px) {
+  .plan-cards-column.active {
+    padding-bottom: calc(10px + 10 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-cards-column.active {
+    margin: -20px 0px;
+    padding: 20px 0px;
+    margin-right: -10px;
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-cards-column {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    padding-bottom: 30px;
+  }
+}
+@media (max-width: 479.98px) {
+  .plan-cards-column {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 90%;
+            flex: 0 0 90%;
+    max-width: 300px;
+    padding: 0px 0px;
+    margin: 0px 0px;
+    padding-bottom: 30px;
+    margin-bottom: 40px;
+  }
+  .plan-cards-column.active {
+    padding: 0px 0px;
+    margin: 0px 0px;
+    margin-bottom: 40px;
+    padding-bottom: 30px;
+  }
+}
+
+.plan-item__title {
+  padding-top: 40px;
+  margin-bottom: 30px;
+  font-size: 32px;
+  font-weight: 300;
+  color: #26272d;
+}
+@media (max-width: 1170px) {
+  .plan-item__title {
+    padding-top: calc(20px + 20 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 1170px) {
+  .plan-item__title {
+    margin-bottom: calc(20px + 10 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-item__title {
+    padding-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+.plan-item__cost {
+  display: inline-block;
+  font-size: 11px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #26272d;
+  margin-bottom: 55px;
+  padding: 8px 15px;
+  border: 1px solid #d8d9d9;
+  border-radius: 30px;
+}
+@media (max-width: 1170px) {
+  .plan-item__cost {
+    margin-bottom: calc(25px + 30 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-item__cost {
+    margin-bottom: 25px;
+  }
+}
+
+.plan-item__text {
+  margin: 0px auto;
+  max-width: 170px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 400;
+  color: #8c8f94;
+  margin-bottom: 50px;
+}
+@media (max-width: 1170px) {
+  .plan-item__text {
+    margin-bottom: calc(25px + 25 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-item__text {
+    margin-bottom: 25px;
+  }
+}
+
+.plan-item-features__list {
+  font-size: 16px;
+  font-weight: 400;
+  color: #26292c;
+  padding: 0 15px;
+  margin-bottom: 50px;
+}
+.plan-item-features__list li {
+  margin-bottom: 25px;
+}
+@media (max-width: 1170px) {
+  .plan-item-features__list li {
+    margin-bottom: calc(15px + 10 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-item-features__list li {
+    margin-bottom: 25px;
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1170px) {
+  .plan-item-features__list li {
+    margin-bottom: calc(15px + 10 * ((100vw - 479.98px) / 690.02));
+  }
+}
+.plan-item-features__list li:last-child {
+  margin-bottom: 0px;
+}
+.plan-item-features__list li span {
+  background: url("../Img/Plan/Icon_01.png") no-repeat left;
+  padding-left: 20px;
+}
+@media (max-width: 1170px) {
+  .plan-item-features__list {
+    margin-bottom: calc(30px + 20 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-item-features__list {
+    margin-bottom: 25px;
+  }
+}
+
+.plan-item__button.btn--blue {
+  padding: 13px 65px;
+}
+@media (max-width: 1200px) {
+  .plan-item__button.btn--blue {
+    padding-right: 65px;
+    padding-left: 65px;
+  }
+}
+@media (max-width: 1200px) and (max-width: 1170px) {
+  .plan-item__button.btn--blue {
+    padding-right: calc(35px + 30 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 1200px) and (max-width: 1170px) {
+  .plan-item__button.btn--blue {
+    padding-left: calc(35px + 30 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .plan-item__button.btn--blue {
+    padding-right: 65px;
+    padding-left: 65px;
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1170px) {
+  .plan-item__button.btn--blue {
+    padding-right: calc(30px + 35 * ((100vw - 479.98px) / 690.02));
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1170px) {
+  .plan-item__button.btn--blue {
+    padding-left: calc(30px + 35 * ((100vw - 479.98px) / 690.02));
+  }
+}
+
 .btn {
   display: inline-block;
   font-family: "Lato";
+  white-space: nowrap;
 }
 .btn--blue {
   font-size: 16px;
-  padding: 13px 22px;
   border-radius: 30px;
   color: #fff;
   background-color: #267df4;
@@ -1403,6 +1895,45 @@ header {
 .btn--black p {
   font-size: 23px;
   line-height: 22px;
+}
+.btn--white {
+  padding: 12px 40px;
+  font-size: 16px;
+  color: #2a80f4;
+  border: 1px #2a80f4 solid;
+  border-radius: 30px;
+}
+@media (max-width: 1200px) {
+  .btn--white {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+@media (max-width: 1200px) and (max-width: 1170px) {
+  .btn--white {
+    padding-right: calc(25px + 15 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 1200px) and (max-width: 1170px) {
+  .btn--white {
+    padding-left: calc(25px + 15 * ((100vw - 767.98px) / 402.02));
+  }
+}
+@media (max-width: 767.98px) {
+  .btn--white {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1170px) {
+  .btn--white {
+    padding-right: calc(20px + 20 * ((100vw - 479.98px) / 690.02));
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1170px) {
+  .btn--white {
+    padding-left: calc(20px + 20 * ((100vw - 479.98px) / 690.02));
+  }
 }
 .btn--get span {
   padding-left: 26px;
