--- a/#Source/Scss/style.scss
+++ b/#Source/Scss/style.scss
@@ -637,6 +637,14 @@ $md4:479.98;
 		background: url('../Img/Download/Icon_01.png') no-repeat right;
 		background-position: right 70%;
 	}
+
+	@media (max-width: $md4 + px){
+		@include adaptiv-value('padding-left', 22, 15, 320);
+		@include adaptiv-value('padding-right', 22, 15, 320);
+		span{
+			@include adaptiv-value('padding-right', 30, 15, 0);
+		}
+	};
 }
 .download-body__text {
 	opacity: 0.3;
@@ -917,23 +925,25 @@ $md4:479.98;
 	flex: 0 0 50%;
 	@include flexbox();
 	justify-content: center;
-	padding-left: 10px;
-	margin-right: -10px;
 	&.active{
 		z-index: 2;
 		background-color: #fff;
+		box-shadow: 10px 10px 60px rgb(0 0 0 / 25%);
+
+		// Увеличиваем высоту
 		@include adaptiv-value('margin-top', -20, -10, $md3);
 		@include adaptiv-value('margin-bottom', -20, -10, $md3);
-		margin-left: -10px;
+
+		// Компенсируем положение содержимого
 		@include adaptiv-value('padding-top', 20, 10, $md3);
 		@include adaptiv-value('padding-bottom', 20, 10, $md3);
-		//padding-left: 20px;
-		padding-right: 20px;
+
+		margin-right: -10px;
+		margin-left: -10px;
 
 		@media (max-width: $md3 + px){
-			margin: -20px 0px;
-			padding: 20px 0px;
-			margin-right: -10px;
+			margin: -15px -10px -15px 0px;
+			padding: 15px 0px;
 		};
 	}
 
@@ -944,7 +954,7 @@ $md4:479.98;
 
 	@media (max-width: $md4 + px){
 		flex: 0 0 90%;
-		max-width: 300px;
+		max-width: 320px;
 		padding: 0px 0px;
 		margin: 0px 0px;
 
@@ -966,8 +976,8 @@ $md4:479.98;
 	font-weight: 300;
 	color: #26272d;
 	@media (max-width: $md3 + px){
-		padding-top: 20px;
-		margin-bottom: 20px;
+		padding-top: 25px;
+		margin-bottom: 25px;
 	};
 }
 .plan-item__cost {
@@ -995,7 +1005,7 @@ $md4:479.98;
 	color: #8c8f94;
 	@include adaptiv-value('margin-bottom', 50, 25, $md3);
 	@media (max-width: $md3 + px){
-		margin-bottom: 25px;
+		margin-bottom: 30px;
 	};
 }
 .plan-item-features {}
@@ -1007,7 +1017,7 @@ $md4:479.98;
 	li{
 		@include adaptiv-value('margin-bottom', 25, 15, $md3);
 		@media (max-width: $md3 + px){
-			@include adaptiv-value('margin-bottom', 25, 15, $md4);
+			@include adaptiv-value('margin-bottom', 25, 20, $md4);
 		};
 		&:last-child{
 			margin-bottom: 0px;
@@ -1019,7 +1029,7 @@ $md4:479.98;
 	}
 	@include adaptiv-value('margin-bottom', 50, 30, $md3);
 	@media (max-width: $md3 + px){
-		margin-bottom: 25px;
+		margin-bottom: 40px;
 	};
 }
 .plan-item__button {
@@ -1036,6 +1046,56 @@ $md4:479.98;
 	}
 }
 
+// ==================================
+
+.newsletter {}
+.container {}
+.newsletter-body {
+	padding-top: 90px;
+	padding-bottom: 86px;
+	text-align: center;
+}
+.newsletter-body__title {
+	font-family: 'Varela Round';
+	font-size: 42px;
+	line-height: 52px;
+	font-weight: 400;
+	color: #26292c;
+
+	margin-bottom: 50px;
+}
+.newsletter-body-form {
+	padding: 3px;
+	margin: 0px auto;
+	@include flexbox();
+	justify-content: space-between;
+	border: 1px solid #cbcbce;
+	border-radius: 30px;
+	max-width: 560px;
+
+	margin-bottom: 30px;
+}
+.newsletter-body-form__input {
+	font-size: 16px;
+	font-weight: 400;
+	color: #3a3d4b;
+
+	padding-left: 20px;
+	padding-right: 20px;
+	border-radius: 30px;
+	flex-grow: 1;
+	color: #3f414f;
+
+	// Чтобы input мог уменьшаться сильнее
+	min-width: 100px;
+}
+.newsletter-body-form__button {}
+.newsletter-body__text {
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 400;
+	color: #8c8f94;
+}
 // ==================================
 
 // Подключаем footer
