--- a/Css/style.css
+++ b/Css/style.css
@@ -229,6 +229,12 @@ header {
     margin-bottom: 50px;
   }
 }
+@media (max-height: 720px) {
+  .FirstScreen {
+    height: 100%;
+    background-size: auto;
+  }
+}
 
 .main {
   position: relative;
@@ -323,7 +329,7 @@ header {
 }
 
 .main__button {
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 .main__button span {
   background: url("../Img/Main/icon_01.png") no-repeat left;
@@ -332,6 +338,11 @@ header {
 @media (max-height: 950px) {
   .main__button {
     margin-bottom: 30px;
+  }
+}
+@media (max-height: 720px) {
+  .main__button {
+    margin-bottom: 20px;
   }
 }
 
@@ -352,6 +363,11 @@ header {
           justify-content: flex-end;
   width: 100%;
   height: 100%;
+}
+@media (max-height: 720px) {
+  .main__phone {
+    height: 300px;
+  }
 }
 
 .features-columns {
@@ -1334,6 +1350,7 @@ header {
   .reviews-body__leftArrow {
     padding-right: 15px;
     padding-left: 15px;
+    visibility: visible;
   }
 }
 @media (max-width: 767.98px) and (max-width: 1170px) {
@@ -1360,6 +1377,7 @@ header {
   .reviews-body__rightArrow {
     padding-right: 15px;
     padding-left: 15px;
+    visibility: visible;
   }
 }
 @media (max-width: 767.98px) and (max-width: 1170px) {
