--- a/#Source/Scss/style.scss
+++ b/#Source/Scss/style.scss
@@ -168,7 +168,6 @@ $md4:479.98;
 	};
 	margin-bottom: 20px;
 }
-
 .main__phone {
 	background-size: contain;
 	background-position: bottom;
@@ -321,7 +320,6 @@ $md4:479.98;
 	color: #26272d;
 
 	max-width: 240px;
-
 	margin-bottom: 70px;
 
 	@media (max-width: $md1 + px){
@@ -400,6 +398,10 @@ $md4:479.98;
 		max-width: $mw+100+px;
 	}
 	margin-bottom: 190px;
+	@media (max-width: $md1 + px){
+		@include adaptiv-value('margin-bottom', 190, 90, 320);
+	};
+	
 }
 .location-body {
 	@include flexbox();
@@ -544,12 +546,10 @@ $md4:479.98;
 	color: #8c8f94;
 	margin-bottom: 45px;
 }
-
 .interface-header-slider {
 	@include flexbox();
 	justify-content: center;
 }
-
 .interface-header-slider__image {
 	padding-top: 51%;
 	flex: 0 0 22%;
@@ -595,7 +595,6 @@ $md4:479.98;
 		@include adaptiv-value('padding-bottom', 130, 80, 320);
 	};
 }
-.container {}
 .download-body{
 	text-align: center;
 }
@@ -983,7 +982,6 @@ $md4:479.98;
 		margin-bottom: 40px;
 	};
 }
-.plan-cards-column__item {}
 .plan-item__title {
 	@include adaptiv-value('padding-top', 40, 20, $md3);
 	@include adaptiv-value('margin-bottom', 30, 20, $md3);
@@ -1023,7 +1021,6 @@ $md4:479.98;
 		margin-bottom: 30px;
 	};
 }
-.plan-item-features {}
 .plan-item-features__list {
 	font-size: 16px;
 	font-weight: 400;
@@ -1063,8 +1060,6 @@ $md4:479.98;
 
 // ==================================
 
-.newsletter {}
-.container {}
 .newsletter-body {
 	padding-top: 90px;
 	padding-bottom: 86px;
@@ -1104,7 +1099,6 @@ $md4:479.98;
 	// Чтобы input мог уменьшаться сильнее
 	min-width: 100px;
 }
-.newsletter-body-form__button {}
 .newsletter-body__text {
 	font-size: 14px;
 	line-height: 24px;
