--- a/Css/style.css
+++ b/Css/style.css
@@ -724,6 +724,16 @@ header {
 .location .container {
   max-width: 1270px;
 }
+@media (max-width: 1200px) {
+  .location {
+    margin-bottom: 190px;
+  }
+}
+@media (max-width: 1200px) and (max-width: 1170px) {
+  .location {
+    margin-bottom: calc(90px + 100 * ((100vw - 320px) / 850));
+  }
+}
 
 .location-body {
   display: -webkit-box;
